src/test/ui/associated-types/issue-63593.stderr
error[E0601]: `main` function not found in crate `issue_63593`
   |
   = note: consider adding a `main` function to `$DIR/issue-63593.rs`

error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-63593.rs:9:5
   |
LL |     type This = Self;
   |     ^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Self: std::marker::Sized` bound
note: required by `MyTrait`
  --> $DIR/issue-63593.rs:8:1
   |
LL | trait MyTrait {
   | ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0601.
For more information about an error, try `rustc --explain E0277`.
